# BXMA-Data-Analytics-Platform-Prototype

./: .gitignore  BXMA_Technical_Report.md  README.md  bxma_python.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  main.py
backend/auth/: __init__.py  jwt.py  password.py  rbac.py
backend/database/: __init__.py  models.py
bxma/: __init__.py
bxma/agents/: __init__.py  react.py  security.py  swarm.py  tools.py
bxma/analytics/: calculations.py
bxma/attribution/: __init__.py  brinson.py  factor_attribution.py  geometric.py  linking.py
bxma/collaboration/: __init__.py  audit.py  notifications.py  teams.py  workflow.py
bxma/compute/: __init__.py  arrow_io.py  ray_fabric.py
bxma/core/: __init__.py  config.py  demo_portfolio.py  portfolio.py  returns.py  types.py
bxma/data/: __init__.py  engine.py  large_datasets.py  live_market_data.py  macro.py  semantic_alpha.py  sql.py
bxma/explainability/: __init__.py  shap_analysis.py
bxma/integration/: __init__.py  acl.py  data_feeds.py  riskmetrics.py
bxma/optimization/: __init__.py  classical.py  cvar.py  ml_optimizer.py  risk_parity.py  robust.py  thermodynamic.py
bxma/reporting/: __init__.py  dashboard.py  riskmetrics.py  tableau.py
bxma/risk/: __init__.py  covariance.py  factor_models.py  gnn_contagion.py  regime.py  regime_detection.py  var.py
bxma/stress_testing/: __init__.py  scenarios.py
bxma/visualization/: __init__.py  downsampling.py  webgpu_renderer.py
docker/: Dockerfile.backend  Dockerfile.frontend  init-db.sql  prometheus.yml
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
kubernetes/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml
tests/: __init__.py  conftest.py  test_api.py  test_attribution.py  test_optimization.py  test_risk.py
(+28 files in other folders)
